Launcher in einem semi-funktionierenden Zustand. UI work in progress, Feinschliff noch notwendig